Исправления для Docker установки Trudesk
- app.js: Исправлена логика запуска для Docker режима
  * Добавлена проверка installed.value вместо просто installed
  * Исправлено условие запуска установочного сервера

- docker-compose.dev.yml: Настроены переменные окружения для Docker
  * Добавлена TRUDESK_DOCKER: true
  * Настроены правильные адреса MongoDB (mongo вместо localhost)

- src/views/install.hbs: Исправлен JavaScript для Docker режима
  * Автоматическая установка параметров MongoDB для Docker
  * Пропуск ручной настройки БД в Docker окружении

Теперь установка работает корректно в Docker и система автоматически
переключается между режимами установки и обычной работы.

--- a/src/views/install.hbs
+++ b/src/views/install.hbs
@@ -457,8 +457,16 @@
                 }
             });
 
-            var mongoConnection = undefined;
-            var elasticConnection = undefined;
+            var mongoConnection = {{#if isDocker}}{
+                host: 'mongo',
+                port: '27017',
+                username: '',
+                password: '',
+                database: 'herzen'
+            }{{else}}undefined{{/if}};
+            var elasticConnection = {{#if isDocker}}{
+                enable: false
+            }{{else}}undefined{{/if}};
             var adminAccount = undefined;
 
             $('a#btn-skip-elastic').click(function(e) {
