Fix mobile overlay in Handlebars template
- Remove mobile overlay from main.hbs template
- Remove mobile redirect script from main.hbs
- Change wrapper class from uk-hidden-small to responsive-wrapper
- This was the missing piece - main.hbs is used for server-rendered pages
- Mobile overlay should now be completely removed

--- a/src/views/layout/main.hbs
+++ b/src/views/layout/main.hbs
@@ -71,18 +71,7 @@
         <h4 style="font-size: 24px; font-weight: 300; margin-left: 25px;">Please Wait...</h4>
     </div>
 </div>
-<div id="nomobile" class="uk-visible-small uk-hidden-medium uk-hidden-large" style="
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100vw;
-    z-index: 99999999;
-    background: #f6f6f6;
-">
-<div style="position: absolute; top: 50%; left: 0; width: 100%;text-align: center;font-size: 28px; font-weight: 300;"><a
-        href="/mobile">View Mobile Site...</a></div>
-</div>
+<!-- Mobile overlay removed - using responsive design instead -->
 
 <div class="disconnected loader-wrapper" style="display: none; opacity: 0; z-index: 999997;">
     <div class="shadow-wrapper">
@@ -113,7 +102,7 @@
 <!--Tour Start Here-->
 <div id="__tourEnabled" class="hide" style="display:none; visibility: hidden; opacity: 0;">{{data.common.showTour}}</div>
 <div id="__timezone" class="hide" style="display:none; visibility: hidden; opacity: 0;">{{data.common.timezone}}</div>
-<div class="wrapper uk-hidden-small" style="overflow: hidden; height: 100%;">
+<div class="wrapper responsive-wrapper" style="overflow: hidden; height: 100%;">
     <div id="globals"></div>
 
     {{> topbar }}
@@ -141,11 +130,7 @@
 {{#block "js-plugins"}}
 
 {{/block}}
-<script type="text/javascript">
-    if (screen.width <= 800) {
-        document.location = '/mobile';
-    }
-</script>
+<!-- Mobile redirect removed - using responsive design instead -->
 
 <script src="/js/trudesk.min.js"></script>
 
