--- a/src/views/layout/main.hbs
+++ b/src/views/layout/main.hbs
@@ -63,9 +63,11 @@
     <meta name="mobile-web-app-capable" content="yes" />
     
     <!-- PWA Icons -->
-    <link rel="apple-touch-icon" sizes="192x192" href="{{data.common.favicon}}" />
-    <link rel="icon" type="image/png" sizes="192x192" href="{{data.common.favicon}}" />
-    <link rel="icon" type="image/png" sizes="512x512" href="{{data.common.favicon}}" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/icon-16.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/icons/icon-192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/icons/icon-512.png" />
     
     <!-- Inline PWA Manifest -->
     <script>
@@ -82,21 +84,51 @@
             "scope": "/",
             "icons": [
                 {
-                    "src": "/favicon.ico",
-                    "sizes": "16x16 32x32 48x48",
-                    "type": "image/x-icon",
+                    "src": "/icons/icon-16.png",
+                    "sizes": "16x16",
+                    "type": "image/png",
                     "purpose": "any"
                 },
                 {
-                    "src": "/favicon.ico",
+                    "src": "/icons/icon-32.png",
+                    "sizes": "32x32",
+                    "type": "image/png",
+                    "purpose": "any"
+                },
+                {
+                    "src": "/icons/icon-48.png",
+                    "sizes": "48x48",
+                    "type": "image/png",
+                    "purpose": "any"
+                },
+                {
+                    "src": "/icons/icon-72.png",
+                    "sizes": "72x72",
+                    "type": "image/png",
+                    "purpose": "any"
+                },
+                {
+                    "src": "/icons/icon-96.png",
+                    "sizes": "96x96",
+                    "type": "image/png",
+                    "purpose": "any"
+                },
+                {
+                    "src": "/icons/icon-144.png",
+                    "sizes": "144x144",
+                    "type": "image/png",
+                    "purpose": "any"
+                },
+                {
+                    "src": "/icons/icon-192.png",
                     "sizes": "192x192",
-                    "type": "image/x-icon",
+                    "type": "image/png",
                     "purpose": "any"
                 },
                 {
-                    "src": "/favicon.ico",
-                    "sizes": "512x512", 
-                    "type": "image/x-icon",
+                    "src": "/icons/icon-512.png",
+                    "sizes": "512x512",
+                    "type": "image/png",
                     "purpose": "any"
                 }
             ],
